# ContriMix

./: .flake8  .gitignore  .pre-commit-config.yaml  MODELZOO.md  README.md  camelyon_17_do_all.py  camelyon_17_do_all_contrimix.py  camelyon_17_do_all_contrimix_ddp.py  camelyon_17_do_all_erm.py  camelyon_17_do_all_histaugan.py  camelyon_17_do_all_histaugan_backbone.py  camelyon_17_do_all_histaugan_encoders.py  camelyon_17_do_all_histaugan_training_all_domains.py  camelyon_17_do_all_histaugan_training_domains_aug.py  camelyon_17_do_all_noisy_student_phase_1_teacher_training.py  camelyon_17_do_all_noisy_student_phase_2_student_training.py  camelyon_17_do_all_unlabeled_contrimix.py  constants.py  contrimix_demo.ipynb  contrimix_histaugan_analysis.ipynb  ddp_utils.py  eval_utils.py  evaluate.py  generate_augmented_patches_for_mitosis_detection_2021.py  inference_demo_midog_2021.py  my_gradcam.py  pyproject.toml  requirements.txt  rxrx1_do_all_contrimix.py  rxrx1_do_all_contrimix_adjust_weights.py  rxrx1_do_all_contrimix_backbone_training_dp.py  rxrx1_do_all_contrimix_encoder_training_ddp.py  rxrx1_do_all_contrimix_encoder_training_dp.py  rxrx1_do_all_contrimix_full_res.py  rxrx1_do_all_contrimix_full_res_2_mixing.py  rxrx1_do_all_erm.py  rxrx1_do_all_erm_dp.py  saving_utils.py  script.sh  script_utils.py  (+10 more)
contrimix_seed_0_perf/: metadata.pt  y_pred.pt  y_true.pt
histaugan_3_doms_seed_0/: metadata.pt  y_pred.pt  y_true.pt
ip_drit/: _constants.py
ip_drit/algorithms/: __init__.py  _algorithm.py  (+11 more)
notebooks/: Intrabatch_permutation_DRIT_MIDOG_2021.ipynb  Stain_normalization_network_he_v1.ipynb
scripts/: camelyon_17_do_all.py  train_utils.py
(+72 files in other folders)
